Bug 428712 - Folder size (count of files) not shown for symlinked folders
Summary: Folder size (count of files) not shown for symlinked folders
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: general (other bugs)
Version First Reported In: unspecified
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
: 426341 426376 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-11-05 05:20 UTC by Krut Patel
Modified: 2020-11-27 08:37 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.12
Sentry Crash Report:


Attachments
pictures of the bug (339.07 KB, image/png)
2020-11-05 05:20 UTC, Krut Patel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Krut Patel 2020-11-05 05:20:47 UTC
Created attachment 133045 [details]
pictures of the bug

SUMMARY
Bug started since the update to Plasma 5.19.4 from the Manjaro repos. Dolphin has stopped showing the Folder Size and Item Count props in the “Additional Information” field for both symlinked and empty folders.

STEPS TO REPRODUCE
Not sure about this, haven't found anyone else facing this issue.

OBSERVED RESULT
Here, Documents and Public are empty, Downloads, Music, Pictures are symlinked.

https://imgur.com/a/iSFBG9Q

EXPECTED RESULT
It should show the count of items inside the folder.

SOFTWARE/OS VERSIONS 
Linux/KDE Plasma: Linux 5.18, 5.19
KDE Plasma Version: Plasma >5.19.4
KDE Frameworks Version: 5.75.0
Qt Version: 5.15.1

ADDITIONAL INFORMATION

*   The bug works recursively - Inside the downloads symlink folder, no folder shows size.
*   Opening the absolute(resolved) path of symlinked folder fixes the issue.
*   The issue persists even in the “Details” view mode.
*   Doesn't matter if the symlink is on the same filesystem or another.
*   Bug seems to be limited to the "Folder size/Item count" property, others (like "symlink destination") show up fine.
Comment 1 Justin Zobel 2020-11-05 05:26:00 UTC
Confirmed on dolphin from git master.
Comment 2 Méven Car 2020-11-07 06:21:27 UTC
Git commit 1c2fbdef09f1756c337cab39c2d229b22b11fb5b by Méven Car.
Committed on 07/11/2020 at 06:21.
Pushed by meven into branch 'master'.

KDirectoryContentsCounter: fix support of symlinks dir
FIXED-IN: 20.12

M  +4    -3    src/kitemviews/private/kdirectorycontentscounter.cpp

https://invent.kde.org/system/dolphin/commit/1c2fbdef09f1756c337cab39c2d229b22b11fb5b
Comment 3 Nate Graham 2020-11-17 18:03:22 UTC
*** Bug 426376 has been marked as a duplicate of this bug. ***
Comment 4 Nate Graham 2020-11-26 22:35:52 UTC
*** Bug 426341 has been marked as a duplicate of this bug. ***