KDirectoryContentsCounter: fix support of symlinks dir

BUG: 428712
FIXED-IN: 20.12